login pagina probeersel

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -49,7 +49,7 @@
   <label for="pwd" style="display: inline-block; z-index: 41; position: fixed;">password: </label>
   <input type="password" id="pwd" style="display: inline-block; z-index: 41; position: fixed;">
   <input type="submit" onclick="compare(field.value);" style="display: inline-block; z-index: 41; position: fixed;">
-</div>
+</span>
 
 
 <!--================================================================-->
