--- a/covid19/index.html
+++ b/covid19/index.html
@@ -44,11 +44,11 @@
 
 <body id="page-top" onload="CWASA.init();">
 
-<div id="pwdAlert"></div>
-<span id="checkPage">
-  <label for="pwd" style="display: inline-block; z-index: 41; position: fixed;">password: </label>
-  <input type="password" id="pwd" style="display: inline-block; z-index: 41; position: fixed;">
-  <input type="submit" onclick="compare(field.value);" style="display: inline-block; z-index: 41; position: fixed;">
+<div id="pwdAlert" style="z-index: 1050;"></div>
+<span id="checkPage" style="z-index: 1040;">
+  <label for="pwd" style="display: inline-block; z-index: 1040; position: fixed;">password: </label>
+  <input type="password" id="pwd" style="display: inline-block; z-index: 1040; position: fixed;">
+  <input type="submit" onclick="compare(field.value);" style="display: inline-block; z-index: 1040; position: fixed;">
 </span>
 
 
