--- a/covid19/index.html
+++ b/covid19/index.html
@@ -46,9 +46,9 @@
 
 <div id="pwdAlert" style="z-index: 1050;"></div>
 <span id="checkPage" style="z-index: 1040;">
-  <label for="pwd" style="display: inline-block;">password: </label>
-  <input type="password" id="pwd" style="display: inline-block;">
-  <input type="submit" onclick="compare(field.value);" style="display: inline-block;">
+  <label for="pwd" style="display: inline-block; text-align: center;">password: </label>
+  <input type="password" id="pwd" style="display: inline-block; text-align: center;">
+  <input type="submit" onclick="compare(field.value);" style="display: inline-block; text-align: center;">
 </span>
 
 
