login pagina probeersel

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -48,7 +48,7 @@
 <span id="checkPage" style="z-index: 1040;">
   <label for="pwd" style="display: inline-block; text-align: center;">password: </label>
   <input type="password" id="pwd" style="display: inline-block; text-align: center;">
-  <input type="submit" onclick="compare(field.value);" style="display: inline-block; text-align: center;">
+  <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block; text-align: center;">
 </span>
 
 
