--- a/covid19/index.html
+++ b/covid19/index.html
@@ -45,11 +45,13 @@
 <body id="page-top" onload="CWASA.init();">
 
 <div id="pwdAlert" style="z-index: 1050;"></div>
-<span id="checkPage" style="z-index: 1040;">
-  <label for="pwd" style="display: inline-block; text-align: center;">password: </label>
-  <input type="password" id="pwd" style="display: inline-block;">
-  <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
-</span>
+<div style="text-align: center;">
+  <span id="checkPage" style="z-index: 1040;">
+    <label for="pwd" style="display: inline-block; text-align: center;">password: </label>
+    <input type="password" id="pwd" style="display: inline-block;">
+    <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
+  </span>
+</div>
 
 
 <!--================================================================-->
