--- a/covid19/index.html
+++ b/covid19/index.html
@@ -46,7 +46,7 @@
 
 <div id="pwdAlert" style="z-index: 1050;"></div>
 <div style="text-align: center;">
-  <span id="checkPage" style="z-index: 1040;">
+  <span id="checkPage" style="z-index: 1040; margin: auto;">
     <label for="pwd" style="display: inline-block; text-align: center;">password: </label>
     <input type="password" id="pwd" style="display: inline-block;">
     <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
