--- a/covid19/index.html
+++ b/covid19/index.html
@@ -47,7 +47,7 @@
 <div id="pwdAlert" style="z-index: 1050;"></div>
 <div style="text-align: center; z-index: 1040;">
   <span id="checkPage" style="z-index: 1040; margin: auto;">
-    <label for="pwd" style="display: inline-block;">password: </label>
+    <label for="pwd" style="display: inline-block; text-shadow: 1px  #ffffff;">password: </label>
     <input type="password" id="pwd" style="display: inline-block;">
     <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
   </span>
