--- a/covid19/index.html
+++ b/covid19/index.html
@@ -44,9 +44,9 @@
 
 <body id="page-top" onload="CWASA.init();">
 
-<div id="pwdAlert" style="z-index: 1050;"></div>
-<div style="text-align: center; z-index: 1040;">
-  <span id="checkPage" style="z-index: 1040; margin: auto;">
+<div id="pwdAlert"></div>
+<div style="text-align: center; padding: auto;">
+  <span id="checkPage">
     <label for="pwd" style="display: inline-block; text-shadow: 1px  #ffffff;">password: </label>
     <input type="password" id="pwd" style="display: inline-block;">
     <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
