password black text with white shadow

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -47,7 +47,7 @@
 <div id="pwdAlert"></div>
 <div style="text-align: center; padding: auto;">
   <span id="checkPage">
-    <label for="pwd" style="display: inline-block; text-shadow: 1px 1px #ffffff;">password: </label>
+    <label for="pwd" style="display: inline-block; text-shadow: 1px 1px 1px #ffffff;">password: </label>
     <input type="password" id="pwd" style="display: inline-block;">
     <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
   </span>
