--- a/covid19/index.html
+++ b/covid19/index.html
@@ -45,13 +45,11 @@
 <body id="page-top" onload="CWASA.init();">
 
 <div id="pwdAlert"></div>
-<div style="text-align: center; padding: auto;">
-  <span id="checkPage">
-    <label for="pwd" style="display: inline-block; text">password: </label>
-    <input type="password" id="pwd" style="display: inline-block;">
-    <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
-  </span>
-</div>
+<span id="checkPage" style="text-align: center;">
+ <label for="pwd" style="display: inline-block; text">password: </label>
+ <input type="password" id="pwd" style="display: inline-block;">
+ <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
+</span>
 
 
 <!--================================================================-->
