--- a/covid19/index.html
+++ b/covid19/index.html
@@ -42,10 +42,10 @@
 
 </head>
 
-<body id="page-top" onload="CWASA.init();">
+<body id="page-top" style="text-align: center;" onload="CWASA.init();">
 
 <div id="pwdAlert"></div>
-<span id="checkPage" style="text-align: center;">
+<span id="checkPage" style="margin: auto;">
  <label for="pwd" style="display: inline-block; text">password: </label>
  <input type="password" id="pwd" style="display: inline-block;">
  <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
