--- a/covid19/index.html
+++ b/covid19/index.html
@@ -45,11 +45,12 @@
 <body id="page-top" style="text-align: center;" onload="CWASA.init();">
 
 <div id="pwdAlert"></div>
+
 <div id="checkPage">
  <span  style="margin: 0 auto;">
-  <label for="pwd" style="display: inline-block;">password: </label>
-  <input type="password" id="pwd" style="display: inline-block;">
-  <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
+  <label for="pwd" style="display: inline-block; margin: 0 auto;">">password: </label>
+  <input type="password" id="pwd" style="display: inline-block; margin: 0 auto;">">
+  <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block; margin: 0 auto;">">
  </span>
 </div>
 
