--- a/covid19/index.html
+++ b/covid19/index.html
@@ -47,11 +47,9 @@
 <div id="pwdAlert"></div>
 
 <div id="checkPage">
- <span  style="margin: 0 auto;">
-  <label for="pwd" style="display: inline-block; margin: 0 auto;">">password: </label>
+  <label for="pwd" style="display: inline-block; margin: 0 auto;">password: </label>
   <input type="password" id="pwd" style="display: inline-block; margin: 0 auto;">">
   <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block; margin: 0 auto;">">
- </span>
 </div>
 
 
