--- a/covid19/index.html
+++ b/covid19/index.html
@@ -48,8 +48,8 @@
 
 <div id="checkPage">
   <label for="pwd" style="display: inline-block; margin: 0 auto;">password: </label>
-  <input type="password" id="pwd" style="display: inline-block; margin: 0 auto;">">
-  <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block; margin: 0 auto;">">
+  <input type="password" id="pwd" style="display: inline-block; margin: 0 auto;">
+  <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block; margin: 0 auto;">
 </div>
 
 
