--- a/covid19/index.html
+++ b/covid19/index.html
@@ -47,9 +47,11 @@
 <div id="pwdAlert"></div>
 
 <div id="checkPage">
-  <label for="pwd" style="display: inline-block; margin: 0 auto;">password: </label>
-  <input type="password" id="pwd" style="display: inline-block; margin: 0 auto;">
-  <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block; margin: 0 auto;">
+  <div style="display: flex; justify-content: center; align-items: center;">
+   <label for="pwd" style="display: inline-block; margin: 0 auto;">password: </label>
+   <input type="password" id="pwd" style="display: inline-block; margin: 0 auto;">
+   <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block; margin: 0 auto;">
+  </div>
 </div>
 
 
