--- a/covid19/index.html
+++ b/covid19/index.html
@@ -48,9 +48,9 @@
 
 <div id="checkPage">
   <div style="display: flex; justify-content: center; align-items: center;">
-   <label for="pwd" style="display: inline-block; margin: 0 auto;">password: </label>
-   <input type="password" id="pwd" style="display: inline-block; margin: 0 auto;">
-   <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block; margin: 0 auto;">
+   <label for="pwd" style="display: inline-block;">password: </label>
+   <input type="password" id="pwd" style="display: inline-block; margin:">
+   <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
   </div>
 </div>
 
