--- a/covid19/index.html
+++ b/covid19/index.html
@@ -48,7 +48,7 @@
 
 <div id="checkPage">
   <div style="display: flex; justify-content: center; align-items: center; height: 100%;">
-   <label for="pwd" style="display: inline-block;">password: </label>
+   <label for="pwd" style="display: inline-block; text-align: center;">password: </label>
    <input type="password" id="pwd" style="display: inline-block; margin:">
    <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
   </div>
