--- a/covid19/index.html
+++ b/covid19/index.html
@@ -47,7 +47,7 @@
 <div id="pwdAlert"></div>
 
 <div id="checkPage">
-  <div style="display: flex; justify-content: center; align-items: center; height: 100%; text-align: center;">
+  <div style="text-align: center; background-color : #006666; color: white;">
    <label for="pwd" style="display: inline-block; text-align: center;">password: </label>
    <input type="password" id="pwd" style="display: inline-block; margin:">
    <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
