--- a/covid19/index.html
+++ b/covid19/index.html
@@ -44,7 +44,7 @@
 
 <body id="page-top" style="text-align: center;" onload="CWASA.init();">
 
-<div id="pwdAlert"></div>
+<!-- <div id="pwdAlert"></div>
 
 <div id="checkPage">
   <div style="display: flex; justify-content: center; align-items: center; height: 100%; text-align: center; color: white;">
@@ -52,7 +52,7 @@
    <input type="password" id="pwd" style="display: inline-block; margin-right: 5px; margin-left: 5px;">
    <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
   </div>
-</div>
+</div> -->
 
 
 <!--================================================================-->
@@ -169,7 +169,7 @@
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-        <span id="avatar" class="CWASAAvatar av0" align="left" style="text-align: left;"></span>
+        <span id="avatar" class="CWASAAvatar av0" align="left" style="text-align: left; display: none;"></span>
         <!--================================================================-->
 
         <span id="videos" class="undisplayed" align="left" style="text-align: left;">
@@ -183,12 +183,12 @@
 
             <br>
             <!-- Defines the button and label displayed for the option "video" -->
-              <input type="radio" id="videoDisplay" name="display" value="video" onclick="changeFunc(this); checkToD();">
+              <input type="radio" id="videoDisplay" name="display" checked value="video" onclick="changeFunc(this); checkToD();">
               <label for="video" style="margin-right:5px">Video translation</label>
 
             <br>
              <!-- Defines the button and label displayed for the option "avatar" -->
-              <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this); startPose();">
+              <input type="radio" id="avatarDisplay" name="display" value="avatar" onclick="changeFunc(this); startPose();">
               <label for="avatar" style="margin-right: 5px">Avatar translation</label>
 
               <br>
