--- a/covid19/index.html
+++ b/covid19/index.html
@@ -173,7 +173,7 @@
         <!--================================================================-->
 
         <span id="videos" class="prerecorded" align="left" style="text-align: left;">
-          <iframe id="videoHolder" width="600" height="500" src="https://www.youtube-nocookie.com/embed/gsFNU0RL8nI?rel=0&amp;showinfo=0&amp;mute=1&amp;loop=1&amp;playlist=gsFNU0RL8nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
+          <iframe id="videoHolder" width="600px" height="500px" src="https://www.youtube-nocookie.com/embed/gsFNU0RL8nI?rel=0&amp;showinfo=0&amp;mute=1&amp;loop=1&amp;playlist=gsFNU0RL8nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
         </span>
 
         <span align="left" style="display:inline-block; vertical-align:top; margin:30px;text-align: left;">
