teruggezet omdat video niet meer links verschijnt

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -160,7 +160,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-white" id="Translate">
-    <div class="container-fluid" height="100%" align="center" style="text-align: center;">
+    <div class="container-fluid" width="100%" height="100%" align="center" style="text-align: center;">
       <div id="alertZonMwTran" class="alertBox"></div>
       <p class="mb-1 text-black-50">
         <b>Important: caution required in the use of signing avatars</b>
