--- a/covid19/index.html
+++ b/covid19/index.html
@@ -160,7 +160,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-white" id="Translate">
-    <div class="container-fluid" width="100%" height="100%" align="center" style="text-align: center;">
+    <div class="container-fluid" height="100%" align="center" style="text-align: center;">
       <div id="alertZonMwTran" class="alertBox"></div>
       <p class="mb-1 text-black-50">
         <b>Important: caution required in the use of signing avatars</b>
@@ -169,11 +169,11 @@
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-        <span id="avatar" class="CWASAAvatar av0" align="left" style="text-align: left;"></span>
+        <span id="avatar" class="CWASAAvatar av0" align="left" style="text-align: left; display: none;"></span>
         <!--================================================================-->
 
-        <span id="videos" class="undisplayed" align="left" style="text-align: left;">
-          <iframe id="videoHolder" width="600" height="500" src="https://www.youtube-nocookie.com/embed/gsFNU0RL8nI?rel=0&amp;showinfo=0&amp;mute=1&amp;loop=1&amp;playlist=gsFNU0RL8nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
+        <span id="videos" class="prerecorded" align="left" style="text-align: left;">
+          <iframe id="videoHolder" width="500" height="500" src="https://www.youtube-nocookie.com/embed/gsFNU0RL8nI?rel=0&amp;showinfo=0&amp;mute=1&amp;loop=1&amp;playlist=gsFNU0RL8nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
         </span>
 
         <span align="left" style="display:inline-block; vertical-align:top; margin:30px;text-align: left;">
