probeersel video eerst

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -176,7 +176,7 @@
           <iframe id="videoHolder" width="500" height="500" src="https://www.youtube-nocookie.com/embed/gsFNU0RL8nI?rel=0&amp;showinfo=0&amp;mute=1&amp;loop=1&amp;playlist=gsFNU0RL8nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
         </span>
 
-        <span align="left" style="display:inline-block; vertical-align:top; margin:30px;text-align: left;">
+        <span align="left" width="400px" style="display:inline-block; vertical-align:top; margin:30px; text-align: left;">
             <label for="option" style="margin-right:-100px; margin-bottom:15px">
                 <h4>Choose a translation option:</h4>
             </label>
