probeersel video eerst

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -160,7 +160,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-white" id="Translate">
-    <div class="container-fluid" height="100%" align="center" style="text-align: center;">
+    <div class="container-fluid" height="100%" align="center" style="text-align: center; width: 100%;">
       <div id="alertZonMwTran" class="alertBox"></div>
       <p class="mb-1 text-black-50">
         <b>Important: caution required in the use of signing avatars</b>
@@ -176,7 +176,7 @@
           <iframe id="videoHolder" width="500" height="500" src="https://www.youtube-nocookie.com/embed/gsFNU0RL8nI?rel=0&amp;showinfo=0&amp;mute=1&amp;loop=1&amp;playlist=gsFNU0RL8nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
         </span>
 
-        <span align="left" width="400px" style="display:inline-block; vertical-align:top; margin:30px; text-align: left;">
+        <span align="left" style="display:inline-block; vertical-align:top; margin:30px; text-align: left;">
             <label for="option" style="margin-right:-100px; margin-bottom:15px">
                 <h4>Choose a translation option:</h4>
             </label>
