--- a/covid19/index.html
+++ b/covid19/index.html
@@ -44,7 +44,7 @@
 
 <body id="page-top" style="text-align: center;" onload="CWASA.init();">
 
-<!-- <div id="pwdAlert"></div>
+<div id="pwdAlert"></div>
 
 <div id="checkPage">
   <div style="display: flex; justify-content: center; align-items: center; height: 100%; text-align: center; color: white;">
@@ -52,7 +52,7 @@
    <input type="password" id="pwd" style="display: inline-block; margin-right: 5px; margin-left: 5px;">
    <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
   </div>
-</div> -->
+</div>
 
 
 <!--================================================================-->
