--- a/covid19/index.html
+++ b/covid19/index.html
@@ -161,11 +161,13 @@
 <!-- Translate -->
 <section class="projects-section bg-white" id="Translate">
     <div class="container-fluid" height="100%" align="center" style="text-align: center; width: 100%;">
-      <div id="alertZonMwTran" class="alertBox"></div>
+     <div id="alertZonMwTran" class="alertBox"></div>
+     <div style="width: 80%; text-align: center;">
       <p class="mb-1 text-black-50" style="text-align: center;">
         <b>Important: caution required in the use of signing avatars</b>
         The World Federation of the Deaf (WFD) and the World Association of Sign Language Interpreters (WASLI) caution against the use of signing avatars as a replacement for human signers. The quality of signing avatars still lags far behind the quality of appropriately trained and qualified human sign language interpreters. Therefore, the avatar translations that our application provides should only be used if it is absolutely impossible to employ a human sign language interpreter, and a video translation is not available either. The full WFD/WASLI statement can be found <a href="https://wfdeaf.org/news/wfd-wasli-issue-statement-signing-avatars/">here</a>. The Dutch Association of the Deaf (Dovenschap) fully <a href="https://www.dovenschap.nl/wfd-wasli-standpunt-tegen-gebarenavatars/">endorses</a> this statement.
       </p>
+     </div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
