--- a/covid19/index.html
+++ b/covid19/index.html
@@ -79,7 +79,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">About Us</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Suggestions">Suggestions</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Further Resources</a></li>
-                <li class="nav-item"><a class="nav-link" href="index-nl.html"><span class="flag-icon flag-icon-gr flag-icon-squared"></span></a></li>
+                <li class="nav-item"><a class="nav-link" href="index-nl.html"><span class="flag-icon flag-icon-nl"></span></a></li>
             </ul>
         </div>
     </div>
