--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -37,6 +37,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <!-- CSS file for bootstrap grayscale theme -->
 <link rel="stylesheet" href="../css/grayscalestyles.css">
+<!-- CSS file for flag icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.css">
 <!-- CSS file for avatar panel and controls, taken from the UEA website but reduced in order to avoid clashes with bootstrap css -->
 <link rel="stylesheet" href="../css/cwasa-reduced.css">
 
@@ -76,7 +78,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Over Ons</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Suggestions">Suggesties</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Extra Informatie</a></li>
-                <li class="nav-item"><a class="nav-link" href="index.html">EN</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html"><span class="flag-icon flag-icon-gb"></a></li>
             </ul>
         </div>
     </div>
