variabele zinnen check

--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -206,7 +206,7 @@
               <!-- Custom made autocomplete form -->
               <form autocomplete="off">
                 <div id="autocomp" class="autocomplete" style="width:400px;">
-                  <textarea id="mySiGML" class="inputBox" placeholder="Vul hier een zin of trefwoorden in" onkeydown="if(event.keyCode == 13){event.preventDefault();toSiGML(document.getElementById('mySiGML').value);}"></textarea>
+                  <textarea id="mySiGML" class="inputBox" placeholder="Vul hier een zin of trefwoorden in" onkeydown="if(event.keyCode == 13){event.preventDefault();toSiGML(document.getElementById('mySiGML').value,-1);}"></textarea>
                 </div>
                 <!-- <input type="submit"> -->
               </form>
