--- a/covid19/index.html
+++ b/covid19/index.html
@@ -52,7 +52,7 @@
 <div id="checkPage">
   <div style="display: flex; justify-content: center; align-items: center; height: 100%; text-align: center; color: white;">
    <label for="pwd" style="display: inline-block; text-align: center;">password: </label>
-   <input type="password" id="pwd" style="display: inline-block; margin-right: 5px; margin-left: 5px;">
+   <input type="password" id="pwd" style="display: inline-block; margin-right: 5px; margin-left: 5px;" onkeydown="if(event.keyCode == 13){event.preventDefault();compare(document.getElementById('pwd').value);}">
    <input type="submit" onclick="compare(document.getElementById('pwd').value);" style="display: inline-block;">
   </div>
 </div>
