--- a/covid19/index.html
+++ b/covid19/index.html
@@ -259,7 +259,7 @@
                <input type="submit" style="display: inline-block;" onclick="toSiGML(document.getElementById('mySiGML').value, document.getElementById('dayOfTheWeek').value);">
               </div>
 
-              <div id="timeBox" class="md-form" style="display:none;">
+              <div id="timeBox" class="md-form" style="display:none;" min="01:00" max="12:00">
                <input id="timeInput" type="text" class="form-control timepicker" style="width: 100px; display:inline-block;">
                <input type="submit" style="display: inline-block;" onclick="toSiGML(document.getElementById('mySiGML').value,document.getElementById('timeInput').value);">
               </div>
