--- a/covid19/index.html
+++ b/covid19/index.html
@@ -209,43 +209,43 @@
                 <!-- <input type="submit"> -->
               </form>
 
-              <div id="minutesBox" class="undisplayed">
+              <div id="minutesBox" class="varBox">
                <label for="minutes" style="display: inline-block;">Number of minutes:</label>
                <input type="number" id="minutes" name="minutes" min="1" max="59" value="1" style="display: inline-block;">
                <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('minutes').value > 59){alertMessage('error','Please input a number between 0 and 60','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('minutes').value);}">
               </div>
 
-              <div id="hoursBox" class="undisplayed">
+              <div id="hoursBox" class="varBox">
                <label for="hours" style="display: inline-block;">Number of hours:</label>
                <input type="number" id="hours" name="hours" min="1" max="72" value="1" style="display: inline-block;">
                <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('hours').value > 72){alertMessage('error','Please input a number between 0 and 73','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('hours').value);}">
               </div>
 
-              <div id="daysBox" class="undisplayed">
+              <div id="daysBox" class="varBox">
                <label for="days" style="display: inline-block;">Number of days:</label>
                <input type="number" id="days" name="days" min="1" max="14" value="1" style="display: inline-block;">
                <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('days').value > 14){alertMessage('error','Please input a number between 0 and 15','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('days').value);}">
               </div>
 
-              <div id="weeksBox" class="undisplayed">
+              <div id="weeksBox" class="varBox">
                <label for="weeks" style="display: inline-block;">Number of weeks:</label>
                <input type="number" id="weeks" name="weeks" min="1" max="10" value="1" style="display: inline-block;">
                <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('weeks').value > 10){alertMessage('error','Please input a number between 0 and 12','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('weeks').value);}">
               </div>
 
-              <div id="monthsBox" class="undisplayed">
+              <div id="monthsBox" class="varBox">
                <label for="months" style="display: inline-block;">Number of months:</label>
                <input type="number" id="months" name="months" min="1" max="18" value="1" style="display: inline-block;">
                <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('months').value > 18){alertMessage('error','Please input a number between 0 and 19','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('months').value);}">
               </div>
 
-              <div id="aWeekBox" class="undisplayed">
+              <div id="aWeekBox" class="varBox">
                <label for="aWeek" style="display: inline-block;">Times a week:</label>
                <input type="number" id="aWeek" name="aWeek" min="70" max="190" value="1" style="display: inline-block;">
                <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('aWeek').value > 7){alertMessage('error','Please input a number between 0 and 8','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('aWeek').value);}">
               </div>
 
-              <div id="dayOfTheWeekBox" style="display: none;">
+              <div id="dayOfTheWeekBox" class="varBox">
                 <label for="dayOfTheWeek" style="display: inline-block;">Day of the week:</label>
                 <select name="dayOfTheWeek" id="dayOfTheWeek">
                   <option value="Monday">Monday</option>
@@ -259,7 +259,7 @@
                <input type="submit" style="display: inline-block;" onclick="toSiGML(document.getElementById('mySiGML').value, document.getElementById('dayOfTheWeek').value);">
               </div>
 
-              <div id="timeBox" class="md-form" style="display:none;">
+              <div id="timeBox" class="md-form varBox">
                <input id="timeInput" type="text" class="form-control timepicker" style="width: 100px; display:inline-block;">
                <input type="submit" style="display: inline-block;" onclick="toSiGML(document.getElementById('mySiGML').value,document.getElementById('timeInput').value);">
               </div>
