replaybutton werkt nu

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -267,7 +267,7 @@
               <br>
               <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
               <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
-              <input type="button" id="replayButton" class="btn btn-primary" style="display: none;" value="Replay" name="" onclick="playText(document.getElementById('replayButton').name)">
+              <input type="button" id="replayButton" class="btn btn-primary" style="display: none;" value="Replay" name="" onclick="playURL(document.getElementById('replayButton').name)">
               <br>
               <br>
               <label id="speedLabel" for="speedAdj" style="display: inline-block;">Adjust speed: </label>
