disclaimer op voorpagina

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -153,9 +153,35 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Disclaimer -->
+            <div class="col-lg">
+                <div class="bg-light text-center h-100 project">
+                    <div class="d-flex h-100">
+                      <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                          <h4>Disclaimer</h4>
+                          <p class="mb-1 text-black-50">
+                            <b>Important: caution required in the use of signing avatars</b>
+                            <br>
+                            The World Federation of the Deaf (WFD) and the World Association of Sign Language Interpreters (WASLI) caution against the use of signing avatars as a replacement for human signers. The quality of signing avatars still lags far behind the quality of appropriately trained and qualified human sign language interpreters. Therefore, the avatar translations that our application provides should only be used if it is absolutely impossible to employ a human sign language interpreter, and a video translation is not available either. The full WFD/WASLI statement can be found <a href="https://wfdeaf.org/news/wfd-wasli-issue-statement-signing-avatars/">here</a>. The Dutch Association of the Deaf (Dovenschap) fully <a href="https://www.dovenschap.nl/wfd-wasli-standpunt-tegen-gebarenavatars/">endorses</a> this statement. This tool is therefore not meant to serve as a replacement for trained sign language interpreters, but as a back-up for situations in which an interpreter cannot be present.
+                          </p>
+                          <hr class="d-none d-lg-block mb-0 ml-0" />
+                      </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
+
+<!-- <div style="display: flex; justify-content: center; align-items: center; text-align: center; margin-bottom: 20px;">
+      <p class="mb-1 text-black-50" style="display: inline-block; width: 60%;">
+        <b>Important: caution required in the use of signing avatars</b>
+        <br>
+        The World Federation of the Deaf (WFD) and the World Association of Sign Language Interpreters (WASLI) caution against the use of signing avatars as a replacement for human signers. The quality of signing avatars still lags far behind the quality of appropriately trained and qualified human sign language interpreters. Therefore, the avatar translations that our application provides should only be used if it is absolutely impossible to employ a human sign language interpreter, and a video translation is not available either. The full WFD/WASLI statement can be found <a href="https://wfdeaf.org/news/wfd-wasli-issue-statement-signing-avatars/">here</a>. The Dutch Association of the Deaf (Dovenschap) fully <a href="https://www.dovenschap.nl/wfd-wasli-standpunt-tegen-gebarenavatars/">endorses</a> this statement.
+      </p>
+     </div> -->
 
 
 
@@ -165,13 +191,6 @@
 <section class="projects-section bg-white" id="Translate">
     <div class="container-fluid" height="100%" align="center" style="text-align: center; width: 100%;">
      <div id="alertZonMwTran" class="alertBox"></div>
-     <div style="display: flex; justify-content: center; align-items: center; text-align: center; margin-bottom: 20px;">
-      <p class="mb-1 text-black-50" style="display: inline-block; width: 60%;">
-        <b>Important: caution required in the use of signing avatars</b>
-        <br>
-        The World Federation of the Deaf (WFD) and the World Association of Sign Language Interpreters (WASLI) caution against the use of signing avatars as a replacement for human signers. The quality of signing avatars still lags far behind the quality of appropriately trained and qualified human sign language interpreters. Therefore, the avatar translations that our application provides should only be used if it is absolutely impossible to employ a human sign language interpreter, and a video translation is not available either. The full WFD/WASLI statement can be found <a href="https://wfdeaf.org/news/wfd-wasli-issue-statement-signing-avatars/">here</a>. The Dutch Association of the Deaf (Dovenschap) fully <a href="https://www.dovenschap.nl/wfd-wasli-standpunt-tegen-gebarenavatars/">endorses</a> this statement.
-      </p>
-     </div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
