disclaimer op voorpagina

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -105,7 +105,7 @@
     <div class="container-fluid">
         <!-- Challenge Row-->
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
-            <div class="col-lg">
+            <div class="col">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -124,7 +124,7 @@
         <!-- Approach Row-->
 <!--         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
-            <div class="col-lg">
+            <div class="col">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -150,7 +150,7 @@
             </div> -->
 
             <!-- Disclaimer -->
-            <div class="col-lg">
+            <div class="col">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
