--- a/covid19/index.html
+++ b/covid19/index.html
@@ -105,7 +105,7 @@
     <div class="container-fluid">
         <!-- Challenge Row-->
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
-            <div class="col">
+            <div class="col" style="padding: 0; margin-right:10px;">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -124,7 +124,7 @@
         <!-- Approach Row-->
 <!--         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
-            <div class="col">
+            <div class="col" style="padding: 0; margin:0px;">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -139,7 +139,7 @@
             </div>
 
             <!-- Funding -->
-            <div class="col-lg">
+            <div class="col" style="padding: 0; margin-left:10px;">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -158,7 +158,7 @@
 
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
           <!-- Disclaimer -->
-            <div class="col">
+            <div class="col" style="padding: 0; margin-left:0px;">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
