disclaimer op voorpagina

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -158,7 +158,7 @@
 
         <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
           <!-- Disclaimer -->
-            <div class="col" style="padding: 0; margin-left:0px;">
+            <div class="col" style="padding: 0; margin:0px;">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
